# brakeman

./: Cargo.toml  style.scss
src/: axum_ructe.rs  build.rs  main.rs
templates/: page.rs.html
