[package]
name = "brakeman"
version = "0.1.0"
edition = "2021"

build = "./src/build.rs"

[build-dependencies]
ructe = { version = "0.15.0", features = ["sass", "mime03"] }

[dependencies]
axum = { version = "0.5", features = ["headers"] }
env_logger = "0.9.1"
headers = "0.3.8"
mime = "0.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
axum-auth = "0.3.0"
time = { version = "0.3", features = ["serde-well-known"] }
pulldown-cmark = "0.9.2"
